@@ -1,0 +1,15 @@
+**/core
+**/*.sw?
+**/*.so
+**/*.bc
+**/tags
+
+cmake_install.cmake
+CMakeCache.txt
+docker/**
+Dockerfile
+.dockerignore
+.git
+.gitignore
+install_manifest.txt
+Makefile
