@@ -1,0 +1,9 @@
+From dbt2-base
+
+ENV PATH="/usr/pgsql-13/bin:$PATH"
+
+COPY . /usr/local/src/dbt2
+WORKDIR /usr/local/src/dbt2
+RUN cmake -DDBMS=pgsql .
+RUN make
+RUN make install
