@@ -1,0 +1,15 @@
+#!/bin/sh
+
+# Build a Docker image with the DBT-2 PostgreSQL C user defined fucntions.
+
+which docker > /dev/null 2>&1
+if [ $? -ne 0 ]; then
+	echo "docker not in path"
+	exit 1
+fi
+
+TOPDIR=`dirname $0`
+${TOPDIR}/prepare-image || exit 1
+
+TOPDIR="${TOPDIR}/.."
+docker build -t dbt2-database -f Dockerfile.database $TOPDIR
