@@ -1,0 +1,29 @@
+#!/bin/sh
+
+# Build the entire test kit.
+
+which docker > /dev/null 2>&1
+if [ $? -ne 0 ]; then
+	echo "docker not in path"
+	exit 1
+fi
+
+DOCKER_DIR=`dirname $0`
+DOCKER_DIR=`readlink -f $DOCKER_DIR`
+
+DOCKER_TAG="dbt2-base"
+UID=`id -u`
+GID=`id -g`
+
+DBT2_PATH="/usr/local/src/dbt2"
+
+docker run --rm -v ${DOCKER_DIR}/..:${DBT2_PATH}:rw -w ${DBT2_PATH} \
+		-u ${UID}:${GID} $DOCKER_TAG make clean
+docker run --rm -v ${DOCKER_DIR}/..:${DBT2_PATH}:rw -w ${DBT2_PATH} \
+		-u ${UID}:${GID} $DOCKER_TAG rm -f CMakeCache.txt || exit 1
+docker run --rm -v ${DOCKER_DIR}/..:${DBT2_PATH}:rw -w ${DBT2_PATH} \
+		-u ${UID}:${GID} $DOCKER_TAG \
+		bash -c 'exec env PATH="/usr/pgsql-13/bin:$PATH" cmake -DDBMS=pgsql . ' \
+		|| exit 1
+docker run --rm -v ${DOCKER_DIR}/..:${DBT2_PATH}:rw -w ${DBT2_PATH} \
+		-u ${UID}:${GID} $DOCKER_TAG make
