@@ -1,0 +1,33 @@
+#!/bin/sh
+
+# Start the DBT-2 PostgreSQL database.
+
+which docker > /dev/null 2>&1
+if [ $? -ne 0 ]; then
+	echo "docker not in path"
+	exit 1
+fi
+
+DOCKERDIR=`dirname $0`
+DOCKER_NAME="dbt2-database-1w"
+DOCKER_TAG="dbt2-database"
+PGDATA="/opt/pgdata"
+
+${DOCKERDIR}/build-database-pgsql || exit 1
+
+docker run -d --rm -u postgres:postgres --name $DOCKER_NAME -p 5432:5432 \
+		$DOCKER_TAG postgres -D $PGDATA \
+		-c client_encoding='SQL_ASCII' \
+		-c listen_addresses='*' \
+		-c unix_socket_directories='/tmp'
+
+which jq > /dev/null 2>&1
+if [ $? -eq 0 ]; then
+	IPADDRESS=`docker inspect $DOCKER_NAME | jq -r '.[0].NetworkSettings.IPAddress'`
+	echo "IP Address: $IPADDRESS"
+	echo "${DOCKERDIR}/start-client-pgsql $IPADDRESS"
+	echo "PGCLIENTENCODING=\"SQL_ASCII\" psql -h $IPADDRESS dbt2 postgres"
+else
+	echo "Install jq for some tips the next time you run this script, or"
+	echo "read the bottom of the file: $0"
+fi
